--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <h2 class="text-white mb-4">Banda Neira</h2>
                         <p class="text-white-50">
                             Sebuah pulau di Kepulauan Banda yang terletak di Maluku Tengah, yang merupakan salah satu dari indahnya ciptaan Tuhan 
-                            yang berada di Indonesia. Tempat yang cocok sebagai tempat berlibur karena keindahan alamnya.
+                            yang berada di Indonesia. Lokasi yang cocok sebagai tempat berlibur karena keindahan alamnya.
                             bukan hanya keindahaan, Banda Neira juga menjadi tempat wisata sejarah bagi bangsa Indonesia.
                         </p>
                     </div>
