--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     </div>
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="www.linkedin.com/in/mabyanthorif"><i class="fab fa-linkdin"></i></a>
+                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                     <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
                 </div>
             </div>
