--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Address</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">Jalan Al Barokah II No.65, RT 5/RW 1, Cengkareng, Jakarta Barat </div>
+                                <div class="small text-black-50">Jl. Al Barokah II No.65 RT05 / RW06 Duri Kosambi, Cengkareng, Jakarta Barat</div>
                             </div>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="#!">byangresik99@gmail.com</a></div>
+                                <div class="small text-black-50"><a href="byangresik99@gmail.com"></a></div>
                             </div>
                         </div>
                     </div>
@@ -175,6 +175,7 @@
                 <div class="social d-flex justify-content-center">
                     <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
                     <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                    <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
