--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 <i class="fas fa-envelope text-primary mb-2"></i>
                                 <h4 class="text-uppercase m-0">Email</h4>
                                 <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="byangresik99@gmail.com"></a></div>
+                                <div class="small text-black-50"><a href="byangresik99@gmail.com">byangresik99@gmail.com</a></div>
                             </div>
                         </div>
                     </div>
@@ -173,8 +173,8 @@
                     </div>
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                    <a class="mx-2" href="https://www.linkedin.com/in/mabyanthorif/"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="mx-2" href="#!"><i class="fab fa-instagram"></i></a>
                     <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
                 </div>
             </div>
