--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                 </div>
                 <div class="social d-flex justify-content-center">
                     <a class="mx-2" href="https://www.linkedin.com/in/mabyanthorif/"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-instagram"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="https://www.instagram.com/mabyanthorif/"><i class="fab fa-instagram"></i></a>
+                    <a class="mx-2" href="https://github.com/mabyanthorif"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
