--- a/index.html
+++ b/index.html
@@ -173,9 +173,9 @@
                     </div>
                 </div>
                 <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="https://www.linkedin.com/in/mabyanthorif/"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="mx-2" href="https://www.instagram.com/mabyanthorif/"><i class="fab fa-instagram"></i></a>
-                    <a class="mx-2" href="https://github.com/mabyanthorif"><i class="fab fa-github"></i></a>
+                    <a class="mx-2" href="https://www.linkedin.com/in/mabyanthorif/"target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="mx-2" href="https://www.instagram.com/mabyanthorif/"target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a class="mx-2" href="https://github.com/mabyanthorif"target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </section>
